# asos_framework_v2

./: CMakeLists.txt  README.md  main.cpp
asos_root/: asos.c  asos.h  main_ex.txt
asos_root/configs/: asos_config.h  asos_device_tree.h
asos_root/kernel/: asos_bridge.h  asos_command_responce.c  asos_command_responce.h  asos_heap.c  asos_heap.h  asos_list.c  asos_list.h  asos_mailbox.c  asos_mailbox.h  asos_mutex.c  asos_mutex.h  asos_observer.c  asos_observer.h  asos_queue.h  asos_semaphore.c  asos_semaphore.h  asos_stade_machine.c  asos_stade_machine.h  asos_task.c  asos_task.h  asos_tester.h  asos_timer.c  asos_timer.h
asos_root/test_apps/: asos_blinky_test.c  asos_blinky_test.h  asos_cmd_rsp_test.c  asos_cmd_rsp_test.h  asos_sm_test.c  asos_sm_test.h  asos_usb_rr_test.c  asos_usb_rr_test.h
